日付指定をConfigに落とし込み

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,19 @@
 ﻿dropper: '30'
 wiki: 'http://seichi.click/d/%c0%ae%a5%be%a5%f3%bc%b0'
+
+#バレンタインイベント設定
+#以下のすべての日付指定は「西暦4桁-月2桁-日付2桁」で指定してください。
+
+#バレンタインイベント・アイテムドロップ終了日を指定します。この日の再起動の時間まではドロップ機能が継続します。
+DropFinishDay: "2018-02-20"
+
+#バレンタインイベント終了日を指定します。この日の再起動の時間まではイベントが継続します。
+EventFinishDay: "2018-02-27"
+
+#以下のすべての日付指定は「西暦4桁/月2桁/日付2桁」で指定してください。
+#アナウンス等で利用される、バレンタインイベントドロップ終了日を指定します。(通常、上記の日付から1日引いたものを指定してください。)
+#(鯖再起動の時間が4時なため)
+DropFinishDayDisp: "2018/02/19"
+
+#賞味期限等で表示される、バレンタインイベント自体の終了日を指定します。(通常、上記の日付から1日引いたものを指定してください。)
+EventFinishDayDisp: "2018/02/26"
